# MTCNN_facenet_Android

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/newlohoo/faceDemo/mobilefacenet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nir_nfd_gn1.param  nir_nfd_gn6.param
app/src/main/cpp/: FaceAlign.cpp  FaceAlign.h  FaceEngine_jni.cpp  FaceNet.cpp  FaceNet.h  Liveness.cpp  Liveness.h  detecte.cpp  detecte.h
app/src/main/cpp/include/: platform.h
app/src/main/java/com/charleyszc/faceDemo/mobilefacenet/: DrawInfo.java  ErrorCode.java  FaceEngine.java  MainActivity.java
app/src/main/java/com/charleyszc/faceDemo/mobilefacenet/facemodule/: AddPersonActivity.java  CompareActivity.java  TestLivenessActivity.java  TestRecognizeActivity.java  VideoAddFaceActivity.java  VideoRecognizeActivity.java  addPerson.java  compare.java  liveness.java  recognize.java
app/src/main/java/com/charleyszc/faceDemo/mobilefacenet/frontcamera/: AddSurfaceViewCallback.java  CameraSurfaceHolder.java  FaceAddTask.java  FaceRecognizeTask.java  FrontCamera.java  RecSurfaceViewCallback.java
app/src/main/java/com/charleyszc/faceDemo/mobilefacenet/model/: DrawInfo.java  FaceRegisterInfo.java
app/src/main/res/layout/: activity_addface.xml  activity_compare.xml  activity_liveness.xml  activity_main.xml  activity_recognize.xml  activity_testrecognize.xml  activity_videoaddface.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/newlohoo/faceDemo/mobilefacenet/: ExampleUnitTest.java
(+4 files in other folders)
